# openchess

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Cargo.toml  DEPLOYMENTS.md  Dockerfile  HANDOFF.md  LICENSE  PRODUCTION.md  README.md  fly.toml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/web/: .env.example  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/connect/: page.tsx
apps/web/app/game/[id]/: page.tsx
apps/web/app/gauntlet/: page.tsx
apps/web/app/park/: page.tsx
apps/web/app/play/: page.tsx
apps/web/app/player/[address]/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/tournament/: page.tsx
apps/web/components/: AuthButton.tsx  BankrollPanel.tsx  BrowserBotPanel.tsx  Chessboard.tsx  ClaimWinnings.tsx  ConnectEngine.tsx  GameReplay.tsx  Header.tsx  Leaderboard.tsx  LiveSpectator.tsx  Lobby.tsx  MaintenanceBanner.tsx  PlayerBar.tsx  ProfileLink.tsx  ProfileStats.tsx  SeatGame.tsx  SignIn.tsx  SiteFooter.tsx  TimeControlChips.tsx  TournamentClaim.tsx  WalletButton.tsx  WalletMenu.tsx
apps/web/lib/: address.ts  board.ts  bot.ts  browserBot.ts  config.ts  engine.ts  engineContext.tsx  escrow.ts  gameApi.ts  maintenance.ts  openings.ts  play.ts  polyglot.ts  polyglotTable.ts  siwe.ts  spectatorSocket.ts  timeControls.ts  tournaments.ts  useAuthToken.ts  useBankroll.ts  useEnsureChain.ts  useMounted.ts  useOnchainConfig.ts  useSpectatorBoard.ts  verify.ts  wagmi.ts
apps/web/public/: ENGINE.md  book.json
apps/web/scripts/: build-book.mjs  polyglot.test.ts
apps/web/scripts/gen-polyglot-table/: Cargo.toml
apps/web/scripts/gen-polyglot-table/src/: main.rs
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-1780189380264.json
contracts/script/: Deploy.s.sol
contracts/src/: ChessEscrow.sol
contracts/test/: ChessEscrow.t.sol  Invariant.t.sol
crates/byo-client/: Cargo.toml
crates/byo-client/src/: auth.rs  book.rs  connect.rs  engine.rs  gauntlet.rs  main.rs  net.rs
crates/game-engine/: Cargo.toml
crates/game-engine/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/abi/: ChessEscrow.json  MockUSDC.json
crates/ledger/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_init.sql  0002_outbox.sql  0003_outbox_lease.sql  0004_tournament_outbox.sql  0005_tournaments.sql  0006_server_settings.sql  0007_wallet_lower_indexes.sql  0008_tournament_name.sql  0009_outbox_idempotency.sql  0010_result_sig.sql
crates/persistence/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  agents.rs  alert.rs  auth.rs  main.rs  matchmaking.rs  players.rs  ratelimit.rs  room.rs  ws.rs
scripts/: deploy-server.sh  house-bot.sh  onchain-demo.sh  test-sepolia-tournament.sh  tournament-demo.sh  tournament-e2e.py
