[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/game-engine",
    "crates/byo-client",
    "crates/server",
    "crates/ledger",
    "crates/persistence",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["chess platform"]
rust-version = "1.78"

[workspace.dependencies]
# shared internal crates
protocol = { path = "crates/protocol" }
game-engine = { path = "crates/game-engine" }

# chess
shakmaty = "0.27"

# serde / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ids / money / time
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# errors
thiserror = "1"

# async (used by later crates)
tokio = { version = "1", features = ["full"] }
