[package]
name = "ledger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
uuid = { workspace = true }
tracing = "0.1"
alloy = { version = "2", features = ["full", "node-bindings", "json"] }

[dev-dependencies]
tokio = { workspace = true }
