[package]
name = "persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
uuid = { workspace = true }
rust_decimal = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
    "macros",
] }

[dev-dependencies]
tokio = { workspace = true }
