[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "chess-server"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
game-engine.workspace = true
ledger = { path = "../ledger" }
persistence = { path = "../persistence" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
